# Euclase

./: CMakeLists.txt  README.md
examples/: Euclase_base.ecl  Euclase_variables.ecl
src/: ast_layout.c  ast_layout.h  codegen.c  codegen.h  codegen_binary_unary_visitor.c  codegen_binary_unary_visitor.h  codegen_decl_visitor.c  codegen_decl_visitor.h  codegen_expr_visitor.c  codegen_expr_visitor.h  codegen_stmt_visitor.c  codegen_stmt_visitor.h  codegen_visitor.c  codegen_visitor.h  lexer.c  lexer.h  lexer_trie.c  lexer_trie.h  lookup_table.c  lookup_table.h  main.c  parser.c  parser.h  string_view.c  string_view.h  tests.c  tests.h  token.h
